--- a/ventanas html/Css/index.css
+++ b/ventanas html/Css/index.css
@@ -22,9 +22,14 @@
     height: 500px !important;
     width: 100%;
 }
+
 .bottomcard{
     background-color: black;
     color: white;
     border-radius: 2px;
 }
 
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
