--- a/ventanas html/Css/Perfil.css
+++ b/ventanas html/Css/Perfil.css
@@ -2,5 +2,151 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 70%;
     margin:auto;
-    padding-bottom: 10px;
+    
+}
+
+
+.menu{
+    position:relative;
+    width:100%;
+    overflow: hidden;
+}
+
+.sidebar{
+    position: relative;
+    height:100%;
+    width: 100%;
+    background: #11101d;
+    top: 0;
+    left: 0;
+    padding: 6px 14px;
+    
+}
+.sidebar .logo_content .logo{
+    color:#fff;
+    display:flex;
+    height: 50px;
+    width: 100%;
+    align-items: center;
+}
+
+.logo_content .logo i{
+    font-size: 28px;
+    margin-right: 5px;
+
+}
+
+.logo_content .logo .logo_name{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.sidebar #btn{
+    position:absolute;
+    color:#fff;
+    left:90%;
+    top:6px;
+    font-size: 20px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    line-height: 50px;
+    transform: translateX(-50%);
+}
+
+.sidebar ul{
+    margin-top: 20px;
+}
+
+.sidebar ul li{
+    position: relative;
+    height: 70px;
+    width: 100%;
+    margin: 0 5px;
+    list-style: none;
+    line-height: 50px;
+}
+
+
+
+.sidebar ul li a{
+    color:#fff;
+    display:flex;
+    align-items: center;
+    text-decoration: none;
+    transition: all 0.4s ease;
+    border-radius: 12px;
+}
+.sidebar ul li a:hover{
+    color: #000;
+    background:#fff;
+}
+.sidebar ul li a i{
+    height: 50px;
+    min-width: 50px;
+    border-radius: 12px;
+    line-height: 50px;
+    text-align: center;
+}
+
+.sidebar .profile_content{
+    position: relative;
+    color: #fff;
+    bottom:0;
+    left:0;
+    width: 100%;
+}
+
+.sidebar .profile_content .profile{
+    position: relative;
+    padding: 10px 6px;
+    height: 60px;
+}
+
+.sidebar .profile_content .profile .profile_details{
+    display: flex;
+    align-items: center;
+}
+
+.profile .profile_details img{
+    height: 45px;
+    width: 45px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.profile .profile_details .name_mode{
+    margin-left: 10px;
+}
+
+.profile .profile_details .name{
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.profile .profile_details .mode{
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.profile #log_out{
+    position: absolute;
+    left:90%;
+    bottom: 5px;
+    transform: translateX(-50%);
+    min-width: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    border-radius: 12px;
+}
+
+.home_content{
+    height: 100%;
+    width: 100%;
+}
+
+.home_content .text{
+    font-size: 25px;
+    font-weight: 500;
+    color:#000;
 }
