--- a/ventanas html/Css/Perfil.css
+++ b/ventanas html/Css/Perfil.css
@@ -9,12 +9,13 @@
 .menu{
     position:relative;
     width:100%;
+    height: 100%;
     overflow: hidden;
 }
 
 .sidebar{
     position: relative;
-    height:100%;
+    height: 100%;
     width: 100%;
     background: #11101d;
     top: 0;
@@ -90,9 +91,9 @@
 }
 
 .sidebar .profile_content{
-    position: relative;
+    position: absolute;
     color: #fff;
-    bottom:0;
+    bottom:0px;
     left:0;
     width: 100%;
 }
@@ -150,3 +151,9 @@
     font-weight: 500;
     color:#000;
 }
+
+.cambiar{
+    float:right;
+    margin-right: 5px;
+}
+
