--- a/ventanas html/Css/footer.css
+++ b/ventanas html/Css/footer.css
@@ -1,8 +1,9 @@
 footer {
-    position: static;
+    position:relative;
+    margin-top: 20%;
     left: 0;
-    bottom: 0;
-    height: 341px;
+    bottom:0;
+    height: 5%vh;
     width: 100%;
     background-color: #000;
     color: white;
